--- a/style.css
+++ b/style.css
@@ -91,3 +91,25 @@ body{
 .incorrect{
     background-color: red;
 }
+
+.finalMessage{
+    text-align: center;
+    font-size: 20px;
+}
+
+.finalMessage span{
+    display: block;
+    margin-top: 8px;
+}
+
+.finalResetBtn{
+    background-color: #4863f7;
+    color: aliceblue;
+    font-size: 1rem;
+    font-weight: bold;
+    border: 0;
+    border-radius: 6px;
+    height: 48px;
+    padding: 0 32px;
+    transition: filter 0.2s;
+}
